# google-photos-backup

./: .gitignore  .travis.yml  Cargo.toml  README.md  appveyor.yml
src/: album.rs  auth.rs  cli.rs  config.rs  filesystem.rs  filtering.rs  lib.rs  library.rs  main.rs  media_item.rs  worker.rs
